[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/main_screens/temp_main_menu/TempMainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/tiles/maps/Example1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/main_screens/AdventureMode.tscn" type="PackedScene" id=3]
[ext_resource path="res://themes/ph_theme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/main_screens/Credits.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/i_pixel_u/I-pixel-u.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="TempMainMenu" type="Node2D"]
position = Vector2( 180, 120 )
script = ExtResource( 1 )

[node name="Example1" parent="." instance=ExtResource( 2 )]
position = Vector2( -180, -120 )

[node name="AdventureMode" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -240 )

[node name="ButtonAdventureMode" type="Button" parent="."]
margin_left = -88.0
margin_top = -100.0
margin_right = 86.0
margin_bottom = -62.0
theme = ExtResource( 4 )
text = "Adventure Mode"

[node name="Credits" parent="." instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, 240 )

[node name="ButtonCredits" type="Button" parent="."]
margin_left = -88.0
margin_top = 70.0
margin_right = 98.0
margin_bottom = 108.0
theme = ExtResource( 4 )
text = "Credits"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -180.0
margin_top = 120.0
margin_right = 180.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.196078 )

[node name="Version" type="Label" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 180.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "v0.1.0"
align = 2
valign = 1
autowrap = true

[connection signal="pressed" from="AdventureMode/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="ButtonAdventureMode" to="." method="_on_ButtonAdventureMode_pressed"]
[connection signal="pressed" from="Credits/BackFromCredits" to="." method="_on_BackFromCredits_pressed"]
[connection signal="pressed" from="ButtonCredits" to="." method="_on_ButtonCredits_pressed"]

[editable path="AdventureMode"]

[editable path="Credits"]
